<resources>
    <string name="app_name">Knife Demo</string>
    
    <string name="toast_undo">Undo</string>
    <string name="toast_redo">Redo</string>
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_insert_link">Insert link</string>
    <string name="toast_clear_format">Clear formatting</string>
    <string name="toast_toggle_code">Toggle source</string>
    
    <string name="dialog_clear_title">Clear formatting</string>
    <string name="dialog_clear_message">Are you sure you want to clear all formatting?</string>
    <string name="dialog_link_title">Insert link</string>
    <string name="dialog_edit_hint">http(s)://</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>
    
    <string name="menu_github">GitHub</string>
    <string name="github_repo_url">https://github.com/ameermuawiya/Knife-Modren</string>
</resources>
